模拟地图信息,时间状态高亮等

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -95,6 +95,8 @@ body {
     visibility: hidden;
 }
 ::-webkit-scrollbar {
+    width: 0;
+    height: 0;
     visibility: hidden;
   }
 @media (width:1200px) {
