--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -55,7 +55,7 @@ a {
     color: #000;
 }
 
-i {
+i,em {
     font-style: normal;
 }
 
@@ -98,6 +98,9 @@ body {
     width: 0;
     height: 0;
     visibility: hidden;
+  }
+  .el-form-item__label {
+      color: #000;
   }
 @media (width:1200px) {
     font-size: 120px;
