rem静态重新布局

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -111,6 +111,6 @@ body {
   .ggmessage {
     top: 40% !important;
   }
-@media (width:1200px) {
-    font-size: 120px;
-}
+// @media (width:1200px) {
+//     font-size: 120px;
+// }
