--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,15 +1,14 @@
 .Main {
   .title {
   float: left;
-  width: 200/96rem;
-  margin-left: 50/96rem;
-  margin-bottom: 10/96rem;
-  // background-color: #f5faf4;
+  width: 350px;
+  margin-left: 70px;
+  margin-bottom: 20px;
   text-align: center;
   font-weight: bold;
-  font-size: 14/96rem;
+  font-size: 22px;
   background-color: #0c2e51;
-  box-shadow:  0px 0px 4/96rem #27a9eb;
+  box-shadow:  0px 0px 10px #27a9eb;
   /deep/.el-card__body {
     padding: 10px;
     color: #d9faff;
@@ -69,7 +68,7 @@
   }
   /deep/.el-table {
   .cell {
-    font-size: 7/96rem;
+    font-size: 14px;
     color: #d9faff;
   }
   td {
