--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -96,7 +96,7 @@
   margin-left: 400px;
   .el-pagination,
   .el-pagination__total {
-    color: #fff;
+    color: #eee;
   }
   .el-pager li {
     background: transparent;
@@ -104,7 +104,7 @@
   .btn-prev,
   .btn-next {
     background: transparent;
-    color: #fff;
+    color: #eee;
   }
 }
 }
