--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -93,3 +93,6 @@ body {
 .ggmessage {
   top: 40% !important;
 }
+.el-form-item.is-required:not(.is-no-asterisk) > .el-form-item__label:before {
+  content: '';
+}
