--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -114,3 +114,6 @@ body {
 // @media (width:1200px) {
 //     font-size: 120px;
 // }
+.el-form-item.is-required:not(.is-no-asterisk)>.el-form-item__label:before {
+    content: '';
+}
